# esp-toit

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md
example/: CMakeLists.txt  Makefile  sdkconfig
example/main/: CMakeLists.txt  main.cc
example/toit/: main.toit
include/: toit_api.h
src/: ota_service.cc  toit_api.cc  toit_internal.h
